Fix JDK11 usage instead of JDK17 for CI